# webcface-package

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  install.nsh  install_arm64.nsi  install_x64.nsi  install_x86.nsi
.github/workflows/: build.yml
docker/: Dockerfile
